# klangk

./: .env.example  .gitignore  .markdownlint.yaml  ARCHITECTURE.md  CLI.md  CLIENT.md  PLAN.md  README.md  TODO.md  devenv.nix  devenv.yaml  pytest.ini
backend/: pyproject.toml
backend/backend/: agui_translator.py  api.py  auth.py  container_manager.py  file_service.py  main.py  user_store.py  workspace_manager.py  ws_handler.py
backend/bark_backend/: agui_translator.py  auth.py  container_manager.py  file_service.py  main.py  pi_rpc_client.py  terminal_manager.py  user_store.py  workspace_manager.py  ws_handler.py
docker/: Dockerfile  (+2 more)
src/backend/: pyproject.toml
src/backend/bark_backend/: api.py  auth.py  container.py  container_manager.py  email_service.py  exec_session.py  main.py  model.py  pi_rpc_client.py  terminal.py  terminal_manager.py  user_store.py  workspace_manager.py  workspaces.py  ws_handler.py  wshandler.py
src/backend/bark_backend/cli/: __init__.py  auth.py  client.py  config.py  main.py
src/backend/e2e-tests/: test_cli_e2e.py  test_event_fanout.py
src/backend/klangk_backend/: api.py  auth.py  container.py  dockerexec.py  emailsvc.py  files.py  main.py  model.py  terminal.py  util.py  workspaces.py  wshandler.py
src/backend/tests/: conftest.py  test_api.py  test_auth.py  test_cli.py  test_cli_integration.py  test_cli_main.py  test_container.py  test_container_manager.py  test_dockerexec.py  test_email_service.py  test_emailsvc.py  test_env_util.py  test_exec_session.py  test_files.py  test_main.py  test_model.py  test_pi_rpc_client.py  test_terminal.py  test_terminal_manager.py  test_user_store.py  test_util.py  test_workspace_manager.py  test_workspaces.py  test_ws_handler.py  test_wshandler.py
(+188 files in other folders)
