[project]
name = "bark-backend"
version = "0.1.0"
description = "Bark backend: multi-user Pi coding agent web REPL"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "aiodocker>=0.23.0",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "aiosmtplib>=3.0.0",
    "logfire[fastapi]>=3.0.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "typer[all]>=0.12.0",
    "tomli-w>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--capture=no --cov=bark_backend --cov-report=term-missing --no-cov-on-fail --cov-fail-under=100"

[tool.ruff]
line-length = 79

[project.scripts]
bark = "bark_backend.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["bark_backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
